# synchorus

./: CLAUDE.md  PLAN.md  README.md  pubspec.yaml
android/: key.properties.example
android/app/: build.gradle.kts
android/app/src/main/cpp/: CMakeLists.txt  oboe_engine.cpp
docs/: ARCHITECTURE.md  DECISIONS.md  EMULATOR_NETWORK.md  HISTORY.md  LIFECYCLE.md  PLAN.md  SYNC_ALGORITHM_V2.md  SYNC_FLOW.md  SYNC_REDESIGN.md  TEST_SCENARIOS.md
ios/Runner/: AppDelegate.swift  AudioEngine.swift  ExceptionCatcher.h  Info.plist  Runner-Bridging-Header.h  SceneDelegate.swift
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/measurement/: auto_measure_screen.dart
lib/models/: audio_obs.dart  peer.dart  room.dart
lib/providers/: app_providers.dart
lib/screens/: home_screen.dart  native_test_screen.dart  player_screen.dart  room_screen.dart  settings_screen.dart
lib/services/: audio_handler.dart  audio_service.dart  discovery_service.dart  monotonic_clock.dart  native_audio_service.dart  (+6 more)
linux/: CMakeLists.txt
measurements/: auto_2026-05-02_211801.csv  auto_2026-05-02_214017.csv  auto_2026-05-02_220011.csv  auto_2026-05-02_220836.csv  auto_2026-05-02_221407.csv  auto_2026-05-02_221937.csv  auto_2026-05-04_183336.csv  auto_2026-05-04_183924.csv  auto_long_partial_2026-05-02.csv  ios_verify_2026-06-10.csv  ios_verify_v121_2026-06-10.csv  manual_2026-06-05_181705.csv  manual_2026-06-05_182028_s12.csv  realign2s_2026-06-05.csv  realign5s_2026-06-05.csv  reentry_2026-06-05.csv  underrun_v124_2026-06-10_mixed.csv  v0.0.49_burst_2026-04-28.csv  v0.0.49_idle_2026-04-28.csv  v0.0.50_burst_2026-04-28.csv  v0.0.50_compare_2026-04-28.csv  v0.0.51_idle_2026-04-28.csv  v0.0.51_seek_debounce_a_2026-04-28.csv  v0.0.51_seek_debounce_b_2026-04-28.csv  v0.0.52_diagnostic_2026-04-28.csv  v0.0.52_idle_2026-04-28.csv  v0.0.54_autostop_2026-04-28.csv  v0.0.54_burst_2026-04-28.csv  v0.0.54_reverse_2026-04-28.csv  v0.0.54_reverse_guest_logcat.txt  v0.0.55_idle_2026-05-02.csv  v0.0.56_idle_2026-05-02.csv  v0.0.62_first_play_2026-05-02.csv  v0.0.62_first_play_run2_2026-05-02.csv  v0.0.62_first_play_run3_2026-05-02.csv  v0.0.63_first_play_run1_2026-05-02.csv  v0.0.63_first_play_run2_2026-05-02.csv
poc/: README.md
poc/transpose_engine/android/app/src/main/cpp/: CMakeLists.txt  transpose_engine.cpp
scripts/: analyze_anchor.sh  measure.sh
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+135 files in other folders)
